<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    tools:context="theleatherguy.distancetracker.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_speed"
            android:textColor="@color/darkGrey"
            android:textSize="40sp"/>

        <View style="@style/HDivider"/>

        <TextView
            android:id="@+id/tDescSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/current_speed"
            android:textColor="@color/lightGrey"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/default_dist"
                android:textColor="@color/darkGrey"
                android:textSize="24sp"/>

            <View style="@style/HDivider"/>

            <TextView
                android:id="@+id/tDescDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/distance"
                android:textColor="@color/lightGrey"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tAvgSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/default_speed"
                android:textColor="@color/darkGrey"
                android:textSize="24sp"/>

            <View style="@style/HDivider"/>

            <TextView
                android:id="@+id/tDescAvgSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/average_speed"
                android:textColor="@color/lightGrey"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/darkGrey"
                android:textSize="24sp"/>

            <View style="@style/HDivider"/>

            <TextView
                android:id="@+id/tDescTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/duration"
                android:textColor="@color/lightGrey"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bStartStop"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="75dp"
        android:background="@drawable/transition_button"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:textSize="50sp"/>

</LinearLayout>
